--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
       transform: translateY(0%);
       opacity: 1;
     }
-
     @keyframes fadeUp {
       0% {
         transform: translateY(20px);
@@ -48,45 +47,53 @@
     <h2 class="text-3xl font-semibold mb-10 text-center">Наші послуги</h2>
     <div class="flex justify-center">
       <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8 max-w-6xl w-full fade-up">
-        <!-- Послуга -->
         <div onclick="openModal('modal1')" class="bg-white p-6 rounded-lg shadow hover:shadow-xl cursor-pointer transition">
           <h3 class="text-xl font-bold">📱 Ремонт телефонів</h3>
-          <p>Екран, батарея, зарядка, діагностика тощо.</p>
+          <p>Заміна екранів, батарей, камер, мікрофонів, корпусів, а також ремонт після потрапляння води.</p>
         </div>
-
         <div onclick="openModal('modal2')" class="bg-white p-6 rounded-lg shadow hover:shadow-xl cursor-pointer transition">
           <h3 class="text-xl font-bold">💻 Ремонт ПК і ноутбуків</h3>
-          <p>Очищення, апгрейд, діагностика, ремонт компонентів.</p>
+          <p>Очищення, апгрейд, діагностика, ремонт компонентів та відновлення після пошкоджень.</p>
         </div>
-
         <div onclick="openModal('modal3')" class="bg-white p-6 rounded-lg shadow hover:shadow-xl cursor-pointer transition">
           <h3 class="text-xl font-bold">⚙️ Установка Windows і програм</h3>
-          <p>ПЗ, драйвери, налаштування “під ключ”.</p>
+          <p>Установка ОС, драйверів, програмного забезпечення, оптимізація швидкодії.</p>
         </div>
-
         <div onclick="openModal('modal4')" class="bg-white p-6 rounded-lg shadow hover:shadow-xl cursor-pointer transition">
           <h3 class="text-xl font-bold">🛡️ Видалення вірусів</h3>
-          <p>Захист, антивіруси, оптимізація системи.</p>
+          <p>Знешкодження троянів, банерів, шкідливих програм, встановлення антивірусного захисту.</p>
         </div>
-
         <div onclick="openModal('modal5')" class="bg-white p-6 rounded-lg shadow hover:shadow-xl cursor-pointer transition">
           <h3 class="text-xl font-bold">🔌 Заміна гнізда зарядки</h3>
-          <p>Телефони, планшети, ноутбуки – швидко та якісно.</p>
+          <p>Професійна заміна гнізд живлення на телефонах, планшетах і ноутбуках.</p>
         </div>
-
         <div onclick="openModal('modal6')" class="bg-white p-6 rounded-lg shadow hover:shadow-xl cursor-pointer transition">
           <h3 class="text-xl font-bold">🧊 Чистка від пилу</h3>
-          <p>Охолодження, термопаста, безпечна розбірка пристрою.</p>
+          <p>Комплексна чистка охолоджувальної системи та заміна термопасти.</p>
         </div>
-
         <div onclick="openModal('modal7')" class="bg-white p-6 rounded-lg shadow hover:shadow-xl cursor-pointer transition">
           <h3 class="text-xl font-bold">📦 Відновлення даних</h3>
-          <p>USB, HDD, SSD, SD-карти, навіть після форматування.</p>
+          <p>Відновлення файлів після форматування, пошкодження або видалення.</p>
         </div>
-
         <div onclick="openModal('modal8')" class="bg-white p-6 rounded-lg shadow hover:shadow-xl cursor-pointer transition">
           <h3 class="text-xl font-bold">🌐 Налаштування інтернету</h3>
-          <p>Wi-Fi, маршрутизатори, мережеві проблеми.</p>
+          <p>Конфігурація Wi-Fi, маршрутизаторів, усунення проблем з мережею.</p>
+        </div>
+        <div onclick="openModal('modal9')" class="bg-white p-6 rounded-lg shadow hover:shadow-xl cursor-pointer transition">
+          <h3 class="text-xl font-bold">🔋 Заміна акумуляторів</h3>
+          <p>Нові батареї для телефонів, планшетів, ноутбуків – швидко та надійно.</p>
+        </div>
+        <div onclick="openModal('modal10')" class="bg-white p-6 rounded-lg shadow hover:shadow-xl cursor-pointer transition">
+          <h3 class="text-xl font-bold">🎧 Ремонт аудіо-гнізд</h3>
+          <p>Виправлення проблем зі звуком та підключенням гарнітури.</p>
+        </div>
+        <div onclick="openModal('modal11')" class="bg-white p-6 rounded-lg shadow hover:shadow-xl cursor-pointer transition">
+          <h3 class="text-xl font-bold">🖥️ Ремонт моніторів</h3>
+          <p>Заміна матриці, підсвітки, блоків живлення тощо.</p>
+        </div>
+        <div onclick="openModal('modal12')" class="bg-white p-6 rounded-lg shadow hover:shadow-xl cursor-pointer transition">
+          <h3 class="text-xl font-bold">🔑 Відновлення доступу до акаунтів</h3>
+          <p>Допомога у відновленні паролів, розблокування акаунтів.</p>
         </div>
       </div>
     </div>
@@ -104,38 +111,18 @@
 
 <script>
   const modalData = {
-    modal1: {
-      title: "📱 Ремонт телефонів",
-      content: "Заміна екранів, акумуляторів, камер, мікрофонів, корпусів, а також після води. Безкоштовна діагностика!"
-    },
-    modal2: {
-      title: "💻 Ремонт ПК і ноутбуків",
-      content: "Очищення від пилу, ремонт материнських плат, апгрейд SSD/RAM, встановлення драйверів, та багато іншого."
-    },
-    modal3: {
-      title: "⚙️ Установка Windows і програм",
-      content: "Установка Windows 10/11, офісу, драйверів, антивірусів, графічних програм. Без рекламного сміття!"
-    },
-    modal4: {
-      title: "🛡️ Видалення вірусів",
-      content: "Видалення троянів, банерів, шкідливих програм, встановлення захисту та оптимізація системи."
-    },
-    modal5: {
-      title: "🔌 Заміна гнізда зарядки",
-      content: "Професійна заміна гнізд живлення на телефонах, планшетах і ноутбуках. Точна пайка та гарантія."
-    },
-    modal6: {
-      title: "🧊 Чистка від пилу",
-      content: "Комплексна чистка системи охолодження. Заміна термопасти та термопрокладок. Тиха та стабільна робота."
-    },
-    modal7: {
-      title: "📦 Відновлення даних",
-      content: "Відновлення файлів після форматування, видалення або пошкодження накопичувача. Конфіденційно."
-    },
-    modal8: {
-      title: "🌐 Налаштування інтернету",
-      content: "Налаштування роутерів, повторювачів Wi-Fi, покращення сигналу, усунення мережевих проблем."
-    }
+    modal1: { title: "📱 Ремонт телефонів", content: "Заміна екранів, акумуляторів, камер, мікрофонів, корпусів, а також після води. Безкоштовна діагностика!" },
+    modal2: { title: "💻 Ремонт ПК і ноутбуків", content: "Очищення від пилу, ремонт материнських плат, апгрейд SSD/RAM, встановлення драйверів, та багато іншого." },
+    modal3: { title: "⚙️ Установка Windows і програм", content: "Установка Windows 10/11, офісу, драйверів, антивірусів, графічних програм. Без рекламного сміття!" },
+    modal4: { title: "🛡️ Видалення вірусів", content: "Видалення троянів, банерів, шкідливих програм, встановлення захисту та оптимізація системи." },
+    modal5: { title: "🔌 Заміна гнізда зарядки", content: "Професійна заміна гнізд живлення на телефонах, планшетах і ноутбуках. Точна пайка та гарантія." },
+    modal6: { title: "🧊 Чистка від пилу", content: "Комплексна чистка системи охолодження. Заміна термопасти та термопрокладок. Тиха та стабільна робота." },
+    modal7: { title: "📦 Відновлення даних", content: "Відновлення файлів після форматування, видалення або пошкодження накопичувача. Конфіденційно." },
+    modal8: { title: "🌐 Налаштування інтернету", content: "Налаштування роутерів, повторювачів Wi-Fi, покращення сигналу, усунення мережевих проблем." },
+    modal9: { title: "🔋 Заміна акумуляторів", content: "Телефони, планшети, ноутбуки – надійне оновлення батареї." },
+    modal10: { title: "🎧 Ремонт аудіо-гнізд", content: "Виправлення проблем зі звуком та підключенням гарнітури." },
+    modal11: { title: "🖥️ Ремонт моніторів", content: "Заміна матриці, підсвітки, блоків живлення тощо." },
+    modal12: { title: "🔑 Відновлення доступу до акаунтів", content: "Допомога у відновленні паролів, розблокування акаунтів." }
   };
 
   function openModal(id) {
@@ -156,17 +143,55 @@
 <!-- Форма заявки -->
 <section class="bg-white py-10">
   <div class="container mx-auto px-4">
-    <h2 class="text-2xl font-semibold mb-4 text-center">Залишити заявку</h2>
+    <h2 id="form-header" class="text-2xl font-semibold mb-4 text-center">Залишити заявку</h2>
     <form id="contact-form" class="max-w-xl mx-auto grid gap-4">
       <input type="text" id="name" placeholder="Ім’я" class="border rounded p-2 w-full" required>
       <input type="text" id="device" placeholder="Тип пристрою" class="border rounded p-2 w-full" required>
       <textarea id="problem" placeholder="Коротко опиши проблему" class="border rounded p-2 w-full" rows="4" required></textarea>
       <input type="text" id="contact" placeholder="Телефон або Telegram" class="border rounded p-2 w-full" required>
-      <button type="submit" class="bg-blue-600 text-white py-2 px-4 rounded hover:bg-blue-700">Надіслати</button>
-      <p id="form-status" class="text-green-600 font-semibold mt-2 hidden">✅ Повідомлення надіслано!</p>
+      <button type="submit" id="submit-btn" class="bg-blue-600 text-white py-2 px-4 rounded hover:bg-blue-700">Надіслати</button>
     </form>
+    <p id="success-message" class="text-green-600 font-semibold text-center mt-4 hidden">✅ Заява успішно надіслана!</p>
+    <p id="error-message" class="text-red-600 font-semibold text-center mt-4 hidden">❌ Не вдалося надіслати заявку. Будь ласка, перевірте дані.</p>
+    <p id="instructions" class="text-center text-blue-600 font-semibold mt-4 hidden">❗ Якщо ви хочете надіслати ще одну заявку, просто перезавантажте сторінку.</p>
   </div>
 </section>
+
+<script>
+  document.getElementById("contact-form").addEventListener("submit", function(event) {
+    event.preventDefault();
+
+    const botToken = "7613390612:AAFo_tPea_3NtKa-XkMos2nZc3BSplMdepM"; // Твій реальний токен TelegramBot
+    const chatId = "923186719"; // Твій реальний чат ID
+    const name = document.getElementById("name").value;
+    const device = document.getElementById("device").value;
+    const problem = document.getElementById("problem").value;
+    const contact = document.getElementById("contact").value;
+
+    const message = `📝 Нова заявка:\n\n👤 Ім’я: ${name}\n📱 Пристрій: ${device}\n🔧 Проблема: ${problem}\n📞 Контакт: ${contact}`;
+
+    fetch(`https://api.telegram.org/bot${botToken}/sendMessage`, {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ chat_id: chatId, text: message })
+    }).then(response => response.json())
+      .then(data => {
+          // Приховати форму та заголовок
+          document.getElementById("contact-form").classList.add("hidden");
+          document.getElementById("form-header").classList.add("hidden");
+          // Показати повідомлення про успіх
+          document.getElementById("success-message").classList.remove("hidden");
+          document.getElementById("instructions").classList.remove("hidden");
+          // Сховати повідомлення про помилку, якщо воно було
+          document.getElementById("error-message").classList.add("hidden");
+      }).catch(error => {
+          console.error("Помилка:", error);
+          // Показати повідомлення про помилку
+          document.getElementById("error-message").classList.remove("hidden");
+          document.getElementById("success-message").classList.add("hidden");
+      });
+  });
+</script>
 
 <!-- Footer -->
 <footer class="bg-gray-800 text-white py-6">
