--- a/index.html
+++ b/index.html
@@ -4,87 +4,122 @@
   <!-- Основні мета-теги -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  
+
   <!-- Назва та іконка сайту -->
   <title>PC&Phone СЕРВІС</title>
   <link rel="icon" href="logo.png" />
-  
+
   <!-- Підключення TailwindCSS -->
   <script src="https://cdn.tailwindcss.com"></script>
-  
+
+  <!-- Підключення Swiper.js (для слайдера) -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+
   <style>
-  /* Зменшена фіксована навігаційна панель */
-  nav {
-    position: fixed;
-    top: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 85%; /* Зменшена ширина панелі */
-    z-index: 50;
-    background-color: rgba(0, 0, 255, 0.9);
-    padding: 6px 12px; /* Зменшений внутрішній відступ для компактності */
-    border-radius: 8px; /* Злегка закруглені кути для гарного вигляду */
-    box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.1); /* Легша тінь */
-  }
+    /* Зменшена фіксована навігаційна панель */
+    nav {
+      position: fixed;
+      top: 0;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 85%;
+      z-index: 50;
+      background-color: rgba(0, 0, 255, 0.9);
+      padding: 6px 12px;
+      border-radius: 8px;
+      box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.1);
+    }
 
-  /* Відступ для головного контенту */
-  #hero {
-    padding-top: 80px; /* Відступ для уникнення перекриття після завантаження */
-  }
+    /* Відступ для головного контенту */
+    #hero {
+      padding-top: 80px;
+    }
 
-  /* Стилі для секцій при переході */
-  section {
-    scroll-margin-top: 80px; /* Відступ для уникнення перекриття після переходу */
-  }
+    /* Стилі для секцій при переході */
+    section {
+      scroll-margin-top: 80px;
+    }
 
-  /* Стилі для навігаційних кнопок */
-  .nav-link {
-    font-weight: bold;
-    padding: 8px 12px; /* Менші кнопки */
-    border-radius: 6px; /* Зменшений радіус закруглення */
-    display: block;
-    text-align: center;
-    background: rgba(255, 255, 255, 0.15);
-    margin: 4px auto; /* Трохи менші відступи між кнопками */
-    max-width: 150px; /* Зменшена ширина кнопок */
-    transition: background 0.3s ease, transform 0.2s ease;
-  }
-  .nav-link:hover {
-    background: rgba(255, 255, 255, 0.25); /* Легший фон при наведенні */
-    transform: scale(1.03); /* Легший ефект збільшення */
-  }
+    /* Стилі для навігаційних кнопок */
+    .nav-link {
+      font-weight: bold;
+      padding: 8px 12px;
+      border-radius: 6px;
+      display: block;
+      text-align: center;
+      background: rgba(255, 255, 255, 0.15);
+      margin: 4px auto;
+      max-width: 150px;
+      transition: background 0.3s ease, transform 0.2s ease;
+    }
+    .nav-link:hover {
+      background: rgba(255, 255, 255, 0.25);
+      transform: scale(1.03);
+    }
 
-  /* Стилі для карток послуг */
-  .service-card {
-    background: white;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    cursor: pointer;
-    transition: transform 0.2s, box-shadow 0.2s;
-  }
-  .service-card:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-  }
-  .service-card h3 {
-    font-size: 1.5rem;
-    font-weight: bold;
-  }
+    /* Стилі для карток послуг */
+    .service-card {
+      background: white;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      cursor: pointer;
+      transition: transform 0.2s, box-shadow 0.2s;
+    }
+    .service-card:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    }
+    .service-card h3 {
+      font-size: 1.5rem;
+      font-weight: bold;
+    }
 
-  /* Стилі для блоку контактів */
-  .contact-item:hover {
-    background-color: rgba(240, 240, 240, 1);
-    transform: scale(1.05);
-    transition: transform 0.3s ease, background-color 0.3s ease;
-  }
+    /* Стилі для блоку контактів */
+    .contact-item:hover {
+      background-color: rgba(240, 240, 240, 1);
+      transform: scale(1.05);
+      transition: transform 0.3s ease, background-color 0.3s ease;
+    }
 
-  /* Плавна прокрутка при переході */
-  html {
-    scroll-behavior: smooth;
-  }
-</style>
+    /* Плавна прокрутка при переході */
+    html {
+      scroll-behavior: smooth;
+    }
 
+/* Стилі для слайдера */
+#slider {
+  margin-top: 20px;
+  padding: 20px;
+  text-align: center;
+}
+
+.swiper {
+  width: 80%;
+  height: 400px; /* Фіксуємо висоту */
+}
+
+.swiper-slide {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain; /* Робимо зображення повністю видимими */
+}
+
+/* Адаптивність */
+@media (max-width: 768px) {
+  .swiper {
+    width: 100%;
+    height: 300px;
+  }
+}
+  </style>
 </head>
 <body class="bg-gray-100 text-gray-800">
 
@@ -104,23 +139,6 @@
 <!-- Відступ для контенту -->
 <div class="pt-24"></div>
 
-<script>
-  const menuBtn = document.getElementById("menu-btn");
-  const menu = document.getElementById("nav-links");
-
-  // Відкривання/закривання мобільного меню
-  menuBtn.addEventListener("click", () => {
-    menu.classList.toggle("hidden");
-  });
-
-  // Автоматичне закриття при натисканні на пункт меню
-  document.querySelectorAll(".nav-link").forEach(link => {
-    link.addEventListener("click", () => {
-      menu.classList.add("hidden");
-    });
-  });
-</script>
-
 <!-- Заголовок -->
 <header class="bg-white shadow py-6">
   <div class="container mx-auto px-4 text-center">
@@ -128,6 +146,21 @@
     <p class="mt-2">Ремонт і обслуговування вашої техніки – швидко, якісно, доступно!</p>
   </div>
 </header>
+
+<!-- Слайдер зображень -->
+<section id="slider">
+  <div class="swiper mySwiper">
+    <div class="swiper-wrapper">
+      <div class="swiper-slide"><img src="slide1.jpg" alt="Слайд 1"></div>
+      <div class="swiper-slide"><img src="slide2.jpg" alt="Слайд 2"></div>
+      <div class="swiper-slide"><img src="slide3.jpg" alt="Слайд 3"></div>
+    </div>
+    <!-- Навігаційні кнопки -->
+    <div class="swiper-pagination"></div>
+    <div class="swiper-button-prev"></div>
+    <div class="swiper-button-next"></div>
+  </div>
+</section>
 
 <!-- Послуги -->
 <section id="services" class="py-12">
@@ -171,31 +204,6 @@
   </div>
 </div>
 
-<script>
-  const modalData = {
-    modal1: { title: "📱 Ремонт телефонів", content: "Заміна екранів, акумуляторів, камер, мікрофонів, корпусів. Безкоштовна діагностика!" },
-    modal2: { title: "💻 Ремонт ПК і ноутбуків", content: "Очищення від пилу, апгрейд SSD/RAM, ремонт материнських плат, діагностика." },
-    modal3: { title: "⚙️ Установка Windows і програм", content: "Інсталяція Windows 10/11, драйверів, офісного та антивірусного ПО." },
-    modal4: { title: "🛡️ Видалення вірусів", content: "Антивірусна перевірка, очищення системи, налаштування захисту." },
-    modal5: { title: "🔌 Заміна гнізда зарядки", content: "Ремонт гнізда живлення на телефонах, планшетах, ноутбуках." },
-    modal6: { title: "🧊 Чистка від пилу", content: "Глибока чистка, заміна термопасти, оптимізація системи охолодження." }
-  };
-
-  function openModal(id) {
-    const modal = document.getElementById("modal");
-    document.getElementById("modal-title").textContent = modalData[id].title;
-    document.getElementById("modal-content").textContent = modalData[id].content;
-    modal.classList.remove("hidden");
-    setTimeout(() => modal.querySelector(".modal").classList.add("active"), 10);
-  }
-
-  function closeModal() {
-    const modal = document.getElementById("modal");
-    modal.querySelector(".modal").classList.remove("active");
-    setTimeout(() => modal.classList.add("hidden"), 300);
-  }
-</script>
-
 <!-- Форма заявки -->
 <section id="contact-form" class="bg-white py-10">
   <div class="container mx-auto px-4">
@@ -212,42 +220,6 @@
     <p id="instructions" class="text-center text-blue-600 font-semibold mt-4 hidden">❗ Якщо ви хочете надіслати ще одну заявку, просто перезавантажте сторінку.</p>
   </div>
 </section>
-
-<script>
-  document.getElementById("contact-form-element").addEventListener("submit", function(event) {
-    event.preventDefault();
-
-    const botToken = "7613390612:AAFo_tPea_3NtKa-XkMos2nZc3BSplMdepM"; // Замініть на свій токен
-    const chatId = "923186719"; // Замініть на ваш Chat ID
-    const name = document.getElementById("name").value;
-    const device = document.getElementById("device").value;
-    const problem = document.getElementById("problem").value;
-    const contact = document.getElementById("contact").value;
-
-    const message = `📝 Нова заявка:\n\n👤 Ім’я: ${name}\n📱 Пристрій: ${device}\n🔧 Проблема: ${problem}\n📞 Контакт: ${contact}`;
-
-    fetch(`https://api.telegram.org/bot${botToken}/sendMessage`, {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ chat_id: chatId, text: message })
-    }).then(response => response.json())
-      .then(data => {
-          // Приховати форму та заголовок
-          document.getElementById("contact-form-element").classList.add("hidden");
-          document.getElementById("form-header").classList.add("hidden");
-          // Показати повідомлення про успіх
-          document.getElementById("success-message").classList.remove("hidden");
-          document.getElementById("instructions").classList.remove("hidden");
-          // Сховати повідомлення про помилку, якщо воно було
-          document.getElementById("error-message").classList.add("hidden");
-      }).catch(error => {
-          console.error("Помилка:", error);
-          // Показати повідомлення про помилку
-          document.getElementById("error-message").classList.remove("hidden");
-          document.getElementById("success-message").classList.add("hidden");
-      });
-  });
-</script>
 
 <!-- Контакти -->
 <section id="contacts" class="bg-white py-12">
@@ -286,6 +258,94 @@
     <p class="mt-2 text-xs text-gray-400">&copy; 2025 PC&Phone СЕРВІС. Всі права захищені.</p>
   </div>
 </footer>
+
+<script>
+  // Відкривання/закривання мобільного меню
+  const menuBtn = document.getElementById("menu-btn");
+  const menu = document.getElementById("nav-links");
+
+  menuBtn.addEventListener("click", () => {
+    menu.classList.toggle("hidden");
+  });
+
+  document.querySelectorAll(".nav-link").forEach(link => {
+    link.addEventListener("click", () => {
+      menu.classList.add("hidden");
+    });
+  });
+
+// Ініціалізація Swiper.js
+const swiper = new Swiper(".mySwiper", {
+  loop: true, // Безкінечне прокручування
+  autoplay: {
+    delay: 3000,
+    disableOnInteraction: false
+  },
+  pagination: {
+    el: ".swiper-pagination",
+    clickable: true
+  },
+  navigation: {
+    nextEl: ".swiper-button-next",
+    prevEl: ".swiper-button-prev"
+  }
+});
+
+  // Дані для модального вікна
+  const modalData = {
+    modal1: { title: "📱 Ремонт телефонів", content: "Заміна екранів, акумуляторів, камер, мікрофонів, корпусів. Безкоштовна діагностика!" },
+    modal2: { title: "💻 Ремонт ПК і ноутбуків", content: "Очищення від пилу, апгрейд SSD/RAM, ремонт материнських плат, діагностика." },
+    modal3: { title: "⚙️ Установка Windows і програм", content: "Інсталяція Windows 10/11, драйверів, офісного та антивірусного ПО." },
+    modal4: { title: "🛡️ Видалення вірусів", content: "Антивірусна перевірка, очищення системи, налаштування захисту." },
+    modal5: { title: "🔌 Заміна гнізда зарядки", content: "Ремонт гнізда живлення на телефонах, планшетах, ноутбуках." },
+    modal6: { title: "🧊 Чистка від пилу", content: "Глибока чистка, заміна термопасти, оптимізація системи охолодження." }
+  };
+
+  function openModal(id) {
+    const modal = document.getElementById("modal");
+    document.getElementById("modal-title").textContent = modalData[id].title;
+    document.getElementById("modal-content").textContent = modalData[id].content;
+    modal.classList.remove("hidden");
+    setTimeout(() => modal.querySelector(".modal").classList.add("active"), 10);
+  }
+
+  function closeModal() {
+    const modal = document.getElementById("modal");
+    modal.querySelector(".modal").classList.remove("active");
+    setTimeout(() => modal.classList.add("hidden"), 300);
+  }
+
+  // Відправка заявки через Telegram Bot
+  document.getElementById("contact-form-element").addEventListener("submit", function(event) {
+    event.preventDefault();
+
+    const botToken = "7613390612:AAFo_tPea_3NtKa-XkMos2nZc3BSplMdepM"; // Замініть на свій токен
+    const chatId = "923186719"; // Замініть на ваш Chat ID
+    const name = document.getElementById("name").value;
+    const device = document.getElementById("device").value;
+    const problem = document.getElementById("problem").value;
+    const contact = document.getElementById("contact").value;
+
+    const message = `📝 Нова заявка:\n\n👤 Ім’я: ${name}\n📱 Пристрій: ${device}\n🔧 Проблема: ${problem}\n📞 Контакт: ${contact}`;
+
+    fetch(`https://api.telegram.org/bot${botToken}/sendMessage`, {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ chat_id: chatId, text: message })
+    }).then(response => response.json())
+      .then(data => {
+          document.getElementById("contact-form-element").classList.add("hidden");
+          document.getElementById("form-header").classList.add("hidden");
+          document.getElementById("success-message").classList.remove("hidden");
+          document.getElementById("instructions").classList.remove("hidden");
+          document.getElementById("error-message").classList.add("hidden");
+      }).catch(error => {
+          console.error("Помилка:", error);
+          document.getElementById("error-message").classList.remove("hidden");
+          document.getElementById("success-message").classList.add("hidden");
+      });
+  });
+</script>
 	
 </body>
 </html>
